# agent-torrent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  acceptance_test.py  pyproject.toml
.github/workflows/: ci.yml
agenttorrent/: __init__.py  __main__.py  api_harness.py  cli.py  discovery.py  executor.py  identity.py  job.py  ledger.py  manifest.py  peer.py  protocol.py
docs/blog/: what-if-coding-agents-worked-like-bittorrent.md
