[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttorrent"
version = "0.1.0"
description = "AgentTorrent: a peer-to-peer meta-harness where desktop peers advertise agent capabilities and delegate coding tasks to each other, BitTorrent-swarm style."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Raghavan" }]
keywords = ["p2p", "agents", "claude", "codex", "swarm", "meta-harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.11"
dependencies = ["pynacl>=1.5"]

[project.urls]
Homepage = "https://github.com/raghavan/agent-torrent"
Issues = "https://github.com/raghavan/agent-torrent/issues"

[project.scripts]
mesh = "agenttorrent.cli:main"

[tool.setuptools.packages.find]
include = ["agenttorrent*"]
